# DashPVA

./: .channel_reader.ipynb  .gitignore  AGENTS.md  CA_outputtest.py  CHANGELOG.md  LICENSE  ModifiedImageView.py  README.md  RUN_INSTRUCTIONS.md  area_det.yml  channel_reader.py  channel_reader_v2.py  cleanup_dashpva_architecture.md  config.json  dash_analysis.py  dashpva.py  environment.yml  environment_py311.yml  environment_py37.yml  hpc_dpADSim.py  imageshow.ui  install.py  install.sh  pv_monitor_from_collector.py  pvapy_plugins.py  pyFAI_analysis.py  pyproject.toml  pyqtgraph_handler.py  qttimer.py  settings.py  toml_test.py  update_pvs.txt  xpos.npy  ypos.npy
HDFviewer/: interactive.py
calibration/: test.py
collector_testing/: ad_sim_server_modified.py  channel_debugging.py  hpcMetadataProcessor.py  hpc_dpADSim.py  hpc_original_example.py  hpc_s6lambda.py  pv_monitor_from_collector.py  start_ad_sim_server.py  start_hpc_collector.py  test.py  test_stats_plot.py
collectors/: hpc_dpADSim.py  hpc_s6lambda.py
consumers/: 19id_sim_rsm_data.py  4id_sim_rsm_data.py  ad_sim_server_modified.py  hpc_analysis_consumer.py  hpc_metadata_consumer.py  hpc_rsm_consumer.py  hpc_spontaneous_analysis_consumer.py  hpc_vectorized_analysis_consumer.py  ioc_rsm_parameter.py  pv_monitor_from_collector.py  sim_rsm_data.py
consumers/caIOC_servers/: ad_sim_server_modified.py  sim_rsm_data.py
consumers/hpc/analysis/: hpc_rsm_consumer.py  hpc_spontaneous_analysis_consumer.py  hpc_vectorized_analysis_consumer.py
consumers/hpc/meta/: hpc_metadata_consumer.py  hpc_passthrough_consumer.py
database/: __init__.py  db.py  interface.py
database/config/: interfaces.py
database/docs/: README.md
database/managers/: profile.py  settings.py
database/models/: profile.py  setting_value.py  settings.py
gui/: PVs.json  analysis_processor_setup_dialog.ui  analysis_window.ui  area_det_viewer.py  collector_setup_dialog.ui  dashpva.ui  edit_add_config_dialog.ui  hkl_3d_slice_window.ui  hkl_viewer_setup.ui  hkl_viewer_window.ui  imageshow.ui  metadata_processor_setup_dialog.ui  pv_config.ui  pv_plotter.ui  pva_workflow_setup.ui  roi_stats_dialog.ui  scan_plan_upload_dialog.ui  scan_view.ui  start_HPC_Collector.py  start_ad_sim_server.py  start_hpc_collector.py  workbench.ui  xyplots.ipynb
gui/install/: update_dialog.ui
gui/tools/: file_convert.ui  metadata_converter.ui
gui/workbench/: workbench.ui
logs/: workbench_3d_debug.txt
multiprocessing_threading_learning/: multiprocessing_example.py  multithreading_example.py
notebooks/dash_analysis/: DashAnalysis_Quickstart.ipynb  README.md  dash_analysis.ipynb  requirements.txt
pv_configs/: 19ID_pvs.toml  aps_11id.toml  aps_19id.toml  aps_4id_eiger.toml  aps_4id_eiger_no_scan.toml  aps_6id_s6lambda.toml  aps_8id_eiger4m.toml  aps_9id_eiger16m.toml  aps_9id_pilatus.toml  metadata_pvs.toml  sample_config.toml  sim_config.toml  ssrl_bl172_eiger4m.toml  test_pvs.json  xidb.toml
pva_setup/: pva_workflow_setup_dialog.py
scripts/: seed_settings_defaults_sql.py
setup/: instructions.txt
src/dashpva/: __init__.py  cli.py  settings.py
test_data/: 2022-3_calib.poni  HfO2_mp-685097_Orthorhombic.cif
tests/: conftest.py
tests/integration/: ad_sim_server_modified.py  test_bayesian_simulation.py  test_stats_plot.py
tests/test_data/: d350_CeO2-000000.tif.metadata
tests/unit/: test_analysis_tools.py  test_anthropic_backend.py  test_bayesian_persistence.py  test_bayesian_primary_combo.py  test_bayesian_profile_store.py  test_blop_adapter.py  test_chat_controller.py  test_cli.py  test_database.py  test_feature_extractor.py  test_frame_correlation.py  test_history_store.py  test_llm_backends_chat.py  test_manual_roi_aggregate.py  test_mask_manager.py  test_mca_associator.py  test_package_imports.py  test_peak_fit.py  test_pv_tools.py  test_pvapy_resolves.py  test_reasoning_loop.py  test_roi_remove.py  test_roi_visibility.py  test_saved_scan_reader.py  test_sdk_agent.py  test_seed_defaults.py  test_seed_profile_defaults.py  test_settings.py  test_stats_analysis.py  test_tool_bridge.py  test_tools_base.py  test_waterfall_dedup.py
tools/dash_analysis/: README.md  dash_analysis.ipynb  dash_analysis.py  dash_analysis.yml  requirements.txt
utils/: __init__.py  dash_analysis.py  fast_phase_fit.py  generators.py  hdf5_handler.py  hdf5_loader.py  hdf5_writer.py  log_manager.py  mask_manager.py  metadata_converter.py  pva_reader.py  roi_ops.py  rsm_converter.py  size_manager.py  stats_analysis.py  vit_stitch.py
utils/config/: __init__.py  interfaces.py  repository.py  source.py
vectorization_learning/: 3dplotting.py  analyze_complexity.py  vectorized_vs_none_cpVsnp.py  xyplots.ipynb
viewer/: TEST_open3d_Peco_plot.py  TEST_open3d_plot.py  TEST_pvista_plot.py  TEST_pyvista_plot.py  analysis_window.py  area_det_viewer.py  area_det_viewer_sim.py  base_window.py  font_scaling.py  generate_pos.py  hkl_3d_slice_window.py  hkl_3d_viewer.py  hkl_controls_dialog.py  hkl_slice_2d_view.py  hkl_test.py  label_with_axis.py  launcher.py  mask_viewer.py  phase_fitter.py  pv_plotter.py  pv_setup_dialog.py  pva_reader.py  pyFAI_analysis.py  pyFAI_analysis_matplot.py  roi_cropping.py  roi_stats_dialog.py  roi_stats_plot.py  scan_plan_dialog.py  scan_view.py  scatter_plot_QT.py  vit_stitch.py  vit_viewer.py
viewer/bayesian/: __init__.py  bayesian_engine.py  bayesian_viewer.py  bluesky_compat.py  bluesky_plan.py
viewer/controls/: __init__.py  controls_1d.py  controls_2d.py  controls_3d.py
viewer/core/: base_window.py
viewer/documentation/: dialog.py
viewer/hkl3d/: __init__.py  hkl_3d_viewer.py
viewer/launcher/: __init__.py  launcher.py  log_viewer_dialog.py  registry.py  update_dialog.py
viewer/settings/: settings_dialog.py
viewer/tools/: file_convert.py  metadata_converter_gui.py
viewer/views_registry/: registry.py
viewer/visualization/: 3d_plotting_example.py  3d_plotting_example_simple.py
viewer/workbench/: __init__.py  dock_window.py  hkl_3d_plot_dock.py  roi_math_dock.py  workbench.py
workflow/: workflow.py  workflow.ui
(+249 files in other folders)
