[project]
name = "DashPVA"
version = "0.1.0"
description = "Distributed Analysis and Streaming Hub with Process Variable Access"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pyqt5>=5.15.0",
    "pyqtgraph>=0.13.0",
    "h5py>=3.12.0",
    "pyepics>=3.5.0",
    "pvapy>=5.5.0",
    "toml>=0.10.0",
    "dash>=2.18.0",
    "dash-core-components>=2.0.0",
    "dash-html-components>=2.0.0",
    "dash-table>=5.0.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "flask>=3.1.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "pyvista[jupyter]>=0.44.0",
    "pyvistaqt>=0.11.0",
    "open3d>=0.19.0",
    "scikit-learn>=1.6.0",
    "ipython>=9.0.0",
    "ipywidgets>=8.1.0",
    "jupyter-core>=5.7.0",
    "jupyterlab-widgets>=3.0.0",
    "joblib>=1.4.0",
    "tqdm>=4.67.0",
    "configargparse>=1.7",
    "addict>=2.4.0",
    "blosc2>=3.2.0",
    "bitshuffle>=0.5.0",
    "lz4>=4.4.0",
    "numexpr>=2.10.0",
    "lmfit>=1.3.0",
    "uncertainties>=3.2.0",
    "qtpy>=2.4.0",
    "pyquaternion>=0.9.0",
    "pytz>=2025.1",
    "superqt>=0.6.7",
    "scikit-image>=0.22.0",
    "opencv-python>=4.8.0",
    "fabio>=2024.0.0",
    "pillow>=12.0.0",
    "hdf5plugin>=4.0.0",
    "trame>=3.12.0",
    "ipympl>=0.9.8",
    "sqlalchemy>=2.0.44",
    "markdown>=3.10",
    "jupyter>=1.1.1",
    "qtawesome>=1.4.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "segment-anything",
    "pycocotools>=2.0.11",
    "onnxruntime>=1.23.2",
    "onnx>=1.20.0",
    "deepinv>=0.3.7",
    "click>=8.1.7",
    "xrayutilities==1.7.10",
    "gpytorch>=1.11",
    "linear-operator>=0.5.0",
    "botorch>=0.9.0",
    "pyfai>=2025.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]

[tool.uv.sources]
segment-anything = { git = "https://github.com/facebookresearch/segment-anything.git" }
# dev-dependencies moved to dependency-groups (see below)

[project.dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Note: pvapy is available on PyPI and can be installed via UV
