[project]
name = "DashPVA"
version = "1.0.3"
description = "Distributed Analysis and Streaming Hub with Process Variable Access"
requires-python = ">=3.11"
# Base = shared core used by the area detector viewer and everything else.
# Heavy/optional stacks (pyvista/VTK, Jupyter, torch/CUDA) live in extras below.
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "pyqt5>=5.15.0",
    "pyqtgraph>=0.13.0",
    "h5py>=3.12.0",
    "toml>=0.10.0",
    "matplotlib>=3.10.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.67.0",
    "blosc2>=3.2.0",
    "bitshuffle>=0.5.0",
    "lz4>=4.4.0",
    "scikit-image>=0.22.0",
    "opencv-python>=4.8.0",
    "fabio>=2024.0.0",
    "pillow>=12.0.0",
    "hdf5plugin>=4.0.0",
    "sqlalchemy>=2.0.44",
    "markdown>=3.10",
    "qtawesome>=1.4.0",
    "click>=8.1.7",
    "xrayutilities==1.7.10",
    "pyfai>=2025.3.0",
    "natsort>=8.0.0",
    "psutil>=5.9.0",
]

# NOTE: ssrl-xrd-tools (XRD Phase Fitter engine) is intentionally NOT in base.
# It transitively pulls JupyterLab + pymatgen + holoviews/panel/bokeh/plotly +
# pandas + ipywidgets (~100+ packages, the bulk of install time), so it lives in
# the `standalone` and `full` extras only. The lean `area-det` tier keeps pyFAI
# 1D integration but not the Phase Fitter.

# Install tiers are additive layers; extras compose via self-references
# (DashPVA[...]) so each tier pulls exactly its layer. Names match the
# `install.sh` editions 1:1 (area-det / standalone / bayesian / full).
[project.optional-dependencies]
# Area detector viewer + live EPICS streaming (the streaming foundation).
area-det = [
    "pvapy>=5.5.0",
    "pyepics>=3.5.0",
]
# Post-analysis tools + Jupyter (no streaming). The workbench, HKL 3D viewer, and
# the notebook DashAnalysis API render via pyvista/VTK.
standalone = [
    "ssrl-xrd-tools>=0.35.0",
    "pyvista[jupyter]>=0.44.0",
    "pyvistaqt>=0.11.0",
    "jupyter>=1.1.1",
    "ipython>=9.0.0",
    "ipywidgets>=8.1.0",
    "ipympl>=0.9.8",
    "jupyterlab-widgets>=3.0.0",
    "jupyter-core>=5.7.0",
]
# Bayesian optimization = the area-detector foundation + the blop stack
# (blop.ax.Agent — Ax/BoTorch). blop brings bluesky; ophyd adds EPICS device
# classes (and reuses area-det's pyepics as the CA backend). Heavy: pulls torch.
bayesian = [
    "DashPVA[area-det]",
    "blop[ax]>=1.0.0b1",
    "ophyd>=1.9.0",
]
# Everything: streaming + standalone analysis + Bayesian optimizer.
full = [
    "DashPVA[area-det]",
    "DashPVA[standalone]",
    "DashPVA[bayesian]",
]

[project.scripts]
DashPVA = "dashpva.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashpva"]

[tool.uv]
required-environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["dashpva"]

[tool.pytest.ini_options]
testpaths = ["tests"]
